crates/uitest/fixtures/ty/def/trait_impl_nested_generic_projection_arg_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_nested_generic_projection_arg_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ trait_impl_nested_generic_projection_arg_missing_bound.fe:9:9
  │
9 │ impl<T> Foo< <T as Bound>::Item > for S<T> {}
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^ `T` doesn't implement `Bound`
